--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@ p, a {
 .btn-banner {
   font-size: 21px;
   line-height: 21px;
-  padding: 16px 88px;
+  padding: 16px 20px;
   background-color: #FF0960;
   border-radius: 8px;
 }
@@ -43,6 +43,11 @@ p, a {
   max-width: 1440px;
   margin-left: auto;
   margin-right: auto;
+}
+
+.triple-slide .slick-dots button:before,
+.triple-slide .slick-dots li.slick-active button:before {
+  color: white;
 }
 
 @media (min-width: 640px) {
